feat: add test unit LinkTaskHandler.java